...

            <Switch
                android:id="@+id/toggle_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
...
            android:layout_height="match_parent">
            <LinearLayout
                android:id="@+id/usc_map_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
...
                                android:background="@color/gold_transparent"/>
                            <View
                                android:id="@+id/usc_map_cpa"
                                android:layout_width="102dp"
                                android:layout_height="65dp"
...
                                android:background="@color/gold_transparent"/>
                            <View
                                android:id="@+id/usc_map_jff"
                                android:layout_width="50dp"
                                android:layout_height="77dp"
...

                            <View
                                android:id="@+id/usc_map_ugw"
                                android:layout_width="105dp"
                                android:layout_height="255dp"
...
                                android:contentDescription="@string/crc"/>
                            <View
                                android:id="@+id/usc_map_mrc"
                                android:layout_width="86dp"
                                android:layout_height="65dp"
...
            </LinearLayout>
            <LinearLayout
                android:id="@+id/usc_list_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
...
                        android:orientation="vertical">
                        <TextView
                            android:id="@+id/daily_schedule_title"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
...
                            android:text="@string/daily_schedule"/>
                        <LinearLayout
                            android:id="@+id/daily_schedule_buildings"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:orientation="vertical"/>
                        <TextView
                            android:id="@+id/frequently_visited_title"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
...
                            android:text="@string/frequently_visited"/>
                        <LinearLayout
                            android:id="@+id/frequently_visited_buildings"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
...
                                android:textSize="17sp"
                                android:fontFamily="@font/ibm_plex_serif_semibold"
                                android:text="@string/thh_display"/>
                        </LinearLayout>
                        <LinearLayout
...
                                android:textSize="17sp"
                                android:fontFamily="@font/ibm_plex_serif_semibold"
                                android:text="@string/kap_display"/>
                        </LinearLayout>
                        <LinearLayout
...
                                android:textSize="17sp"
                                android:fontFamily="@font/ibm_plex_serif_semibold"
                                android:text="@string/rth_display"/>
                        </LinearLayout>
                        <LinearLayout
...
                                android:textSize="17sp"
                                android:fontFamily="@font/ibm_plex_serif_semibold"
                                android:text="@string/sal_display"/>
                        </LinearLayout>
                        <LinearLayout
...
                                android:textSize="17sp"
                                android:fontFamily="@font/ibm_plex_serif_semibold"
                                android:text="@string/cpa_display"/>
                        </LinearLayout>
                        <LinearLayout
...
                                android:textSize="17sp"
                                android:fontFamily="@font/ibm_plex_serif_semibold"
                                android:text="@string/jff_display"/>
                        </LinearLayout>
                        <LinearLayout
...
                                android:textSize="17sp"
                                android:fontFamily="@font/ibm_plex_serif_semibold"
                                android:text="@string/ugw_display"/>
                        </LinearLayout>
                        <LinearLayout
...
                                android:textSize="17sp"
                                android:fontFamily="@font/ibm_plex_serif_semibold"
                                android:text="@string/mrc_display"/>
                        </LinearLayout>
                        <LinearLayout
...
                                android:textSize="17sp"
                                android:fontFamily="@font/ibm_plex_serif_semibold"
                                android:text="@string/mhc_display"/>
                        </LinearLayout>
                        <LinearLayout
...
